@@ -4,6 +4,9 @@
 # BREAK = change breaks existing code
 # BUG   = fixed a bug that was crashing
 
+May 16, 2001
+	line drawing functions now use an optional width
+
 May 15, 2001
 	image module is now builtin, but formats are optional
 	enhanced save function in image (handles opengl)
